--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Hexo
+title: Fallensakura
 subtitle: ''
 description: ''
 keywords: blog
@@ -11,12 +11,12 @@ author: fallensakura715
 language:
 - zh-cn
 - en
-timezone: ''
+timezone: 'Asia/Shanghai'
 
 # URL
 ## Set your site url here. For example, if you use GitHub Page, set url as 'https://username.github.io/project'
-url: https://fallensakura715.github.io/project
-permalink: :year/:month/:day/:title/
+url: https://fallensakura715.github.io/
+permalink: :month/:day/:year/:title/
 permalink_defaults:
 pretty_urls:
   trailing_index: true # Set to false to remove trailing 'index.html' from permalinks
@@ -103,4 +103,6 @@ theme: landscape
 # Deployment
 ## Docs: https://hexo.io/docs/one-command-deployment
 deploy:
-  type: ''
+  type: git
+  repository: https://github.com/fallensakura715/fallensakura715.github.io.git
+  branch: main
