--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
     "version": "8.1.1"
   },
   "dependencies": {
+    "gitalk": "^1.8.0",
     "hexo": "^8.0.0",
+    "hexo-algoliasearch": "^2.0.1",
     "hexo-deployer-git": "^4.0.0",
     "hexo-generator-archive": "^2.0.0",
     "hexo-generator-category": "^2.0.0",
+    "hexo-generator-i18n": "^0.0.10",
     "hexo-generator-index": "^4.0.0",
     "hexo-generator-tag": "^2.0.0",
     "hexo-renderer-ejs": "^2.0.0",
@@ -23,7 +26,8 @@
     "hexo-renderer-pug": "^3.0.0",
     "hexo-renderer-stylus": "^3.0.1",
     "hexo-server": "^3.0.0",
-    "hexo-theme-landscape": "^1.0.0"
+    "hexo-theme-landscape": "^1.0.0",
+    "hexo-wordcount": "^6.0.1"
   },
   "packageManager": "yarn@4.5.0"
 }
