--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "gitalk": "^1.8.0",
     "hexo": "^8.0.0",
     "hexo-algoliasearch": "^2.0.1",
+    "hexo-butterfly-hpptalk": "^1.0.4",
     "hexo-deployer-git": "^4.0.0",
     "hexo-generator-archive": "^2.0.0",
     "hexo-generator-category": "^2.0.0",
