--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "hexo-server": "^3.0.0",
     "hexo-tag-aplayer": "^3.0.4",
     "hexo-theme-landscape": "^1.0.0",
-    "hexo-wordcount": "^6.0.1"
+    "hexo-wordcount": "^6.0.1",
+    "strip-ansi": "^6.0.1"
   },
   "packageManager": "yarn@4.5.0"
 }
