chore: change perm path and url

--- a/_config.yml
+++ b/_config.yml
@@ -15,9 +15,9 @@ timezone: 'Asia/Shanghai'
 
 # URL
 ## Set your site url here. For example, if you use GitHub Page, set url as 'https://username.github.io/project'
-url: https://fallensakura715.github.io/
+url: https://www.falnsakura.top/
 root: /
-permalink: :year/:day/:title/
+permalink: :year/:month/:title/
 permalink_defaults:
 pretty_urls:
   trailing_index: true # Set to false to remove trailing 'index.html' from permalinks
