--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -108,6 +108,7 @@ cover:
   # When cover is not set, the default cover is displayed
   default_cover:
     # - xxx.jpg
+  wave: true
 
 # Replace Broken Images
 error_img:
@@ -315,7 +316,7 @@ aside:
     storage: 10
     avatar: true
   card_categories:
-    enable: true
+    enable: false
     # If set 0 will show all
     limit: 8
     # Choose: none / true / false
@@ -763,23 +764,21 @@ site_verification:
 # Theme color for customize
 # Notice: color value must in double quotes like "#000" or may cause error!
 
-# theme_color:
-#   enable: true
-#   main: "#49B1F5"
-#   paginator: "#00c4b6"
-#   button_hover: "#FF7242"
-#   text_selection: "#00c4b6"
-#   link_color: "#99a9bf"
-#   meta_color: "#858585"
-#   hr_color: "#A4D8FA"
-#   code_foreground: "#F47466"
-#   code_background: "rgba(27, 31, 35, .05)"
-#   toc_color: "#00c4b6"
-#   blockquote_padding_color: "#49b1f5"
-#   blockquote_background_color: "#49b1f5"
-#   scrollbar_color: "#49b1f5"
-#   meta_theme_color_light: "ffffff"
-#   meta_theme_color_dark: "#0d0d0d"
+theme_color:
+  enable: true
+  main: "#D97757"
+  paginator: "#D97757"
+  button_hover: "#C4684A"
+  text_selection: "#D97757"
+  link_color: "#D97757"
+  meta_color: "#6B6555"
+  hr_color: "#E5E3DB"
+  code_foreground: "#D97757"
+  code_background: "#F5F4F0"
+  toc_color: "#D97757"
+  blockquote_padding_color: "#D97757"
+  blockquote_background_color: "rgba(217, 119, 87, 0.1)"
+  scrollbar_color: "#D97757"
 
 # The user interface setting of category and tag page
 # Choose: index - same as Homepage UI / default - same as archives UI
@@ -816,21 +815,21 @@ display_mode: light
 
 # Configuration for beautifying the content of the article
 beautify:
-  enable: false
+  enable: true
   # Specify the field to beautify (site or post)
   field: post
   # Specify the icon to be used as a prefix for the title, such as '\f0c1'
-  title_prefix_icon:
+  title_prefix_icon: '\f0c1'
   # Specify the color of the title prefix icon, such as '#F47466'
-  title_prefix_icon_color:
+  title_prefix_icon_color: '#D97757'
 
 # Global font settings
 # Don't modify the following settings unless you know how they work
 font:
   global_font_size:
   code_font_size:
-  font_family:
-  code_font_family:
+  font_family: 'Inter, -apple-system, BlinkMacSystemFont, "Segoe UI", "PingFang SC", "Hiragino Sans GB", "Microsoft YaHei", sans-serif'
+  code_font_family: '"JetBrains Mono", "Fira Code", Consolas, monospace'
 
 # Font settings for the site title and site subtitle
 blog_title_font:
@@ -1062,9 +1061,19 @@ css_prefix: true
 inject:
   head:
     # - <link rel="stylesheet" href="/xxx.css">
+    # Google Fonts - 引入 Inter 字体
+    - <link rel="preconnect" href="https://fonts.googleapis.com">
+    - <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    - <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=JetBrains+Mono:wght@400;500&display=swap" rel="stylesheet">
+    # 自定义 Claude 主题 CSS
+    # - <link rel="stylesheet" href="/css/claude-theme.css">
+    - <link rel="stylesheet" href="/css/claude-theme-lite.css">
+
+    # - <link rel="stylesheet" href="/css/claude-header.css">
   bottom:
     # - <script src="xxxx"></script>
-    - <div class="aplayer no-destroy" data-id="12682020018" data-server="netease" data-type="playlist" data-mini="true" data-fixed="true" data-autoplay="false"> </div>
+    # - <div class="aplayer no-destroy" data-id="12682020018" data-server="netease" data-type="playlist" data-mini="true" data-fixed="true" data-autoplay="false"> </div>
+    - <script src="/js/callout-parser.js"></script>
 
 # CDN Settings
 # Don't modify the following settings unless you know how they work
